# marhta

./: .bumpversion.cfg  .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: jaro_winkler.rs  levenshtein.rs  lib.rs
tests/: fixtures.py  test_gil.py  test_jaro_winkler.py  test_levenshtein.py
tests/fixtures/: build_fixtures.py  jaro_winkler_similarity.json  levenshtein_distance.json
