[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "marhta"
version = "0.1.0"
description = "Fast string similarity algorithms in Rust"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["string", "similarity", "levenshtein", "jaro-winkler", "fuzzy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Text Processing :: General",
]

[project.urls]
Repository = "https://github.com/pjwerneck/marhta"
